# agent-orchestration

./: .env.example  .gitignore  Presentation Draft.txt  check_models.py  models.json
.github/workflows/: ci.yml
ao-core/: pyproject.toml
ao-core/ao/: __init__.py  runtime.py
ao-core/ao/config/: manifest.py
ao-core/ao/engine/: __init__.py  base.py  langgraph_engine.py  manifest_executor.py
ao-core/ao/engine/patterns/: concurrent.py  linear.py  magentic.py  planner.py  router.py  supervisor.py
ao-core/ao/hitl/: manager.py
ao-core/ao/hitl/channels/: webhook.py  websocket.py
ao-core/ao/identity/: context.py  entra.py  extract.py
ao-core/ao/llm/: aws_bedrock.py  azure_openai.py  base.py  ollama.py  openai.py
ao-core/ao/memory/: knowledge.py  long_term.py  shared.py  short_term.py  user_memory.py
ao-core/ao/observability/: decorators.py  tracer.py
ao-core/ao/policy/: engine.py  schema.py
ao-core/ao/policy/rules/: allowed_actions.py  content_safety.py  llm_judge.py  pii.py  rate_limit.py  token_budget.py
ao-core/ao/resilience/: checkpoint.py  circuit_breaker.py  fallback.py  retry.py
ao-core/ao/tools/: executor.py  registry.py  schema.py
ao-platform/api/: db.py  identity.py  main.py
docker/: Dockerfile.ao-api  Dockerfile.ao-worker  Dockerfile.email-assistant  Dockerfile.graph-compliance  Dockerfile.rag-search  docker-compose.local.yml  init.sql
docs/: ROADMAP.md  ao_design_considerations.md  architecture.md
infra/: dev.tfplan  main.tf  tfplan.ps1  variables.tf
scripts/: query_a2a_state.py  query_user_memory.py
tests/eval/: __init__.py  (+1 more)
(+84 files in other folders)
